refactor: observations sonarlint and refactor code